// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single booking query should map skysilver and skygold to travel_basic/plus 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "passengers": Array [
        Object {
          "insuranceType": "TRAVEL_BASIC",
        },
        Object {
          "insuranceType": "TRAVEL_PLUS",
        },
      ],
    },
  },
}
`;

exports[`single booking query should return valid fields 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "arrival": Object {
        "airport": Object {
          "city": Object {
            "name": "Mocked City Name",
          },
          "locationId": "MOCKED",
        },
      },
      "departure": Object {
        "airport": Object {
          "city": Object {
            "name": "Mocked City Name",
          },
          "locationId": "MOCKED",
        },
      },
      "destinationImageUrl": "https://images.kiwi.com/photos/600x600/paris_fr.jpg",
      "directAccessURL": "https://kiwi.com/content/manage/2707251/b206db64-718f-4608-babb-0b8abe6e1b9d",
      "legs": Array [
        Object {
          "arrival": Object {
            "airport": Object {
              "city": Object {
                "name": "Mocked City Name",
              },
              "locationId": "MOCKED",
            },
          },
          "departure": Object {
            "airport": Object {
              "city": Object {
                "name": "Mocked City Name",
              },
              "locationId": "MOCKED",
            },
          },
        },
      ],
    },
  },
}
`;

exports[`single booking query should return vehicle type for each Leg 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "legs": Array [
        Object {
          "type": "AIRCRAFT",
        },
      ],
    },
  },
}
`;

exports[`single booking query should work with opaque Booking id 1`] = `
Object {
  "data": Object {
    "booking": Object {
      "databaseId": 2707251,
      "id": "Qm9va2luZzoyNzA3MjUx",
    },
  },
}
`;
